# micro-gpt

./: .gitignore  LICENSE  README.md  bigram.py  gpt-dev.ipynb  gpt.py  model.ipynb  pyproject.toml
