[project]
name = "micro-gpt"
version = "0.1.0"
description = ""
authors = [
    {name = "Aleksa Mihajlovic",email = "mihajlovic.aleksa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.3.4,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)"
]

[tool.poetry]
package-mode = false 

[tool.poetry.group.dev.dependencies]
ipykernel = "^7.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
